# ab-instagram-video-processor

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLATFORM_NAMES.md  PRIVACY_POLICY.md  README.md  README_TREND_MONITOR.md  TERMS_OF_SERVICE.md  audio_extractor.py  batch_audio_extract.py  config_games.json  config_tech.json  instagram_quick_download.py  pyproject.toml  quick_audio_extract.py  requirements.txt  transcribe_audio.py  trend_monitor_agent.py  trend_monitor_scheduler.py  youtube_video_search.py
.claude/: settings.local.json
ab/dc/: PIPELINE_README.md  cli_pipeline.py  video_pipeline_orchestrator.py  workflow.md
ab/dc/analysers/: README.md  (+8 more)
ab/services/: downloader.py
dark-c/: semantic-version.md
output/agno/: SKILL.md
output/agno_data/: summary.json
processed_videos/RusBe_8arLQ/: RusBe_8arLQ_0000_40s_score_095_original_en.md  RusBe_8arLQ_0000_40s_score_095_original_en.vtt  RusBe_8arLQ_0000_40s_score_095_original_en_metadata.json  RusBe_8arLQ_0001_40s_score_137_original_en.md  RusBe_8arLQ_0001_40s_score_137_original_en.vtt  RusBe_8arLQ_0001_40s_score_137_original_en_metadata.json  RusBe_8arLQ_0002_40s_score_153_original_en.md  RusBe_8arLQ_0002_40s_score_153_original_en.vtt  RusBe_8arLQ_0002_40s_score_153_original_en_metadata.json  RusBe_8arLQ_0003_40s_score_156_original_en.md  RusBe_8arLQ_0003_40s_score_156_original_en.vtt  RusBe_8arLQ_0003_40s_score_156_original_en_metadata.json  RusBe_8arLQ_0004_40s_score_120_original_en.md  RusBe_8arLQ_0004_40s_score_120_original_en.vtt  (+4 more)
subtitles/: RusBe_8arLQ_en.vtt
transcriptions/: afirmacao-mantra-a-luz-da-verdade_transcription.md
(+2576 files in other folders)
