[project]
name = "instagram-video-downloader"
version = "1.0.0"
description = "Python scripts for downloading Instagram videos and extracting/transcribing audio"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "AeonBridge Co.", email = "contact@aeonbridge.co" }
]
requires-python = ">=3.9"
keywords = ["instagram", "video", "downloader", "audio", "transcription", "whisper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "yt-dlp>=2024.1.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
transcription = [
    "openai-whisper>=20231117",
    "torch>=2.0.0",
]
all = [
    "yt-dlp>=2024.1.0",
    "ffmpeg-python>=0.2.0",
    "openai-whisper>=20231117",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/aeonbridge/download-ig-videos"
Repository = "https://github.com/aeonbridge/download-ig-videos"
Issues = "https://github.com/aeonbridge/download-ig-videos/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]